a11y: fixing contrast issue

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -393,13 +393,7 @@ footer {
       line-height: 25px;
 
       a {
-        color: #f3976c;
-        transition: all 0.3s ease-in-out;
-
-        &:hover {
-          color: #c27755;
-          text-decoration: none;
-        }
+        color: white;
       }
     }
 
